# CoPaw

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: e2e-integration.yml  e2e-smoke.yml
console/: vite.config.ts
console/src/: App.tsx  main.tsx
deploy/mysql/: init_storage.sql
e2e/: .gitignore  E2E_COVERAGE_REPORT.md  README.md  conftest.py  pytest.ini  requirements.txt
e2e/config/: __init__.py  settings.py
e2e/fixtures/: __init__.py
e2e/mocks/: __init__.py  agents.py  auth.py  backups.py  channels.py  cron_jobs.py  environments.py  heartbeat.py  models.py  security.py  sessions.py
e2e/pages/: __init__.py  acp_page.py  agent_stats_page.py  agents_page.py  backups_page.py  base_page.py  channels_page.py  chat_page.py  cronjobs_page.py  environments_page.py  files_page.py  heartbeat_page.py  mcp_page.py  models_page.py  runtime_config_page.py  security_page.py  sessions_page.py  skill_pool_page.py  skills_page.py  token_usage_page.py  tools_page.py  voice_page.py
e2e/tests/: test_acp.py  test_agents.py  (+22 more)
market/: envs.json.example  main.py  pyproject.toml
monitor/: envs.json.example  main.py  pyproject.toml
monitor/src/monitor/: __init__.py  __main__.py  env_defaults.py
monitor/src/monitor/app/: _app.py
monitor/src/monitor/app/routers/: __init__.py
monitor/src/monitor/cli/: main.py
monitor/src/monitor/config/: constant.py  utils.py
monitor/src/monitor/config/envs/: dev.json  prd.json
monitor/src/monitor/envs/: store.py
monitor/src/monitor/utils/: my_logging.py
sysops/: envs.json.example  main.py  pyproject.toml
(+291 files in other folders)
