[project]
name = "monitor"
dynamic = ["version"]
description = "Monitor 运维工程，提供系统运维、监控、部署等服务"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools.dynamic]
version = {attr = "monitor.__version__.__version__"}

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
"monitor" = [
    "config/envs/*.json",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
monitor = "monitor.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"